    - Better IFS newline setting.
    - Send ide pci modules find stderr to /dev/null.
    - Use only one progress bar for both hardware detection and module
      loading, and add the sd_mod and sr_mod loading to it.
  * Bart Cornelis
    - incorporated improvements from debian-l10n-dutch into nl.po
  * Jure Cuhalev
    - Added/updated slovenian translation (sl.po).

 -- Bart Cornelis <cobaco@linux.be>  Tue, 23 Dec 2003 15:57:05 +0100

ddetect (0.59) unstable; urgency=low

  * Bartosz Fenski
    - Updated Polish (pl) translation.
  * Verok Istvan
    - Initial Hungarian translation
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * André Dahlqvist
    - Update Swedish translation. (sv.po)
  * Konstantinos Margaritis
    - Updated Greek translation (el.po)
  * Teófilo Ruiz Suárez
    - Updated Spanish translation (es.po)
    - Switched to UTF-8
  * Alwin Meschede
    - Updated German translation (de.po)
  * Marco d'Itri
    - Add premiminary support for .ko kernel modules.
  * Petter Reinholdtsen
    - Updated Norwegian Bokmål (nb.po).
    - Update Norwegian Nynorsk (nn.po), thanks to Gaute Hvoslef Kvalnes.
  * Joey Hess
    - sed -re does not work with busybox, use 2 sed calls instead
    - busybox shell doesn't elide failed globs, use find instead
    - busybox grep does not support regexps, use less exact match
  * Giuseppe Sacco
    - first italian translation by Davide Viti (it.po)
  * Bart Cornelis
    - Updated Dutch translation (nl.po)
  * Steinar H. Gunderson
    - Updated Norwegian Bokmål (nb.po).
  *  Kęstutis Biliūnas
    - Updated Lithuanian translation (lt.po).
  * Ognyan Kulev
    - Added/updated bulgarian translation (bg.po).
  * Jure Cuhalev
    - Added/updated slovenian translation (sl.po).

 -- Joey Hess <joeyh@debian.org>  Mon, 22 Dec 2003 14:15:11 -0500

ddetect (0.58) unstable; urgency=low

  * Joey Hess
    - Remove the bogus "false" from the end of the modprobe error message
      display.