@@ -15,8 +15,11 @@ ddetect (0.60) UNRELEASED; urgency=low
     - incorporated improvements from debian-l10n-dutch into nl.po
   * Jure Cuhalev
     - Added/updated slovenian translation (sl.po).
+  * Gaudenz Steinlin
+    - add support for discover 2 without the didiscover utility
+      (Thanks to Thiemo Seufer for dumb_join_discover)
 
- -- Bart Cornelis <cobaco@linux.be>  Tue, 23 Dec 2003 15:57:05 +0100
+ -- Gaudenz Steinlin <gaudenz@soziologie.ch>  Tue, 23 Dec 2003 20:35:13 +0100
 
 ddetect (0.59) unstable; urgency=low
 
